fixed content alignment

--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -98,7 +98,7 @@ ul{
     background-color: #f2cfc4;
     width: 97%;
     font-family: 'Work Sans', sans-serif;
-    border-radius: 10em;
+    /*border-radius: 10em;*/
     height: fit-content;
     font-size: .8em;
     font-weight: bold;
@@ -110,10 +110,20 @@ ul{
 .column{
     float: left;
     width: 33.33%;
-    padding: 25px;
+    /*width: 30%;*/
+    /*padding: 25px;*/
     background-color: #f2cfc4;
     display: table-cell;
     text-align: center;
+    /*border-radius: 5em;*/
+    margin: auto;
+}
+
+
+.btm-img img{
+    border-radius: 2em;
+    padding: 0;
+    margin-top: 2em;
 }
 
 #footer-header{
@@ -142,7 +152,7 @@ p{
 img{
     height: 10em;
     padding-top: 2em;
-    border-radius: 1em;
+    /*border-radius: 1.5em;*/
 
 }
 
@@ -155,6 +165,13 @@ img{
     text-align: center;
     margin: 1em;
 }
+
+#content p {
+    /*padding-left: 15px;*/
+    margin: 0 5em;
+    /*background-color: #542212;*/
+}
+
 
 
 
